# NUCLEO-H503RB

./: .gitignore  README.md
firmware/exam/EX-01_LED_UART/src/: main.c
firmware/exam/EX-01_LED_UART/src/bsp/: bsp.c  bsp.h
firmware/exam/EX-01_LED_UART/src/bsp/device/: stm32h5xx_hal_conf.h
firmware/exam/EX-01_LED_UART/src/bsp/ldscript/: STM32H503CBUX_FLASH.ld
firmware/exam/EX-01_LED_UART/src/hw/: hw_def.h
firmware/exam/EX-01_LED_UART/src/hw/driver/: log.c
firmware/exam/EX-02-FreeRTOS/src/ap/modules/: module.h
firmware/exam/EX-02-FreeRTOS/src/bsp/: bsp.c
firmware/exam/EX-02-FreeRTOS/src/bsp/device/: stm32h5xx_hal_conf.h  stm32h5xx_it.h
firmware/exam/EX-02-FreeRTOS/src/bsp/ldscript/: STM32H503CBUX_FLASH.ld
firmware/exam/EX-02-FreeRTOS/src/bsp/rtos/: cpu_utils.c
firmware/exam/EX-02-FreeRTOS/src/common/: def.h
firmware/exam/EX-02-FreeRTOS/src/hw/: hw.c  hw.h  hw_def.h
firmware/nucleo-h5-fw/: CMakeLists.txt
firmware/nucleo-h5-fw/src/: main.c
firmware/nucleo-h5-fw/src/ap/: ap.c
firmware/nucleo-h5-fw/src/ap/modules/: module.c
firmware/nucleo-h5-fw/src/ap/modules/common/: cli.c  info.c  info.h
firmware/nucleo-h5-fw/src/bsp/: bsp.h
firmware/nucleo-h5-fw/src/bsp/device/: stm32h5xx_it.c
firmware/nucleo-h5-fw/src/bsp/rtos/: FreeRTOSConfig.h  rtos.c
firmware/nucleo-h5-fw/src/common/hw/include/: extio.h  us6300.h
firmware/nucleo-h5-fw/src/hw/: hw.c  hw.h  hw_def.h
firmware/nucleo-h5-fw/src/hw/driver/: led.c  uart.c
firmware/nucleo-h5-fw/src/hw/driver/osal/: thread.c
firmware/nucleo-h5-fw/src/lib/ST/STM32H5xx_HAL_Driver/Src/: stm32h5xx_ll_utils.c
firmware/smt32cube-h503/: .cproject  .mxproject  .project  STM32H503RBTX_FLASH.ld  smt32cube-h503.ioc
firmware/smt32cube-h503/Core/Inc/: stm32h5xx_hal_conf.h  stm32h5xx_it.h
firmware/smt32cube-h503/Core/Src/: gpio.c  main.c  rtc.c  stm32h5xx_it.c  usart.c
(+4 files in other folders)
